# autoform

./: .gitignore  Cargo.toml  README.md  slide.py  testslide1.odp
src/: feature.rs  main.rs  nn.rs  nn2.rs
test_data/: content.xml
