[package]
name = "rs-app"
version = "0.1.0"
authors = ["Walter <waltermwfs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5.4"
quick-xml = "0.17.2"
rand = "0.7.3"
ndarray = "0.12.1"
approx = "0.3.2"
